<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="user"
            type="com.example.carlosguzmanlayoutsandactions.User" />
    </data>

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@android:color/white">

        <Button
            android:id="@+id/btn_write_to_logcat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/write_to_logcat"
            android:textSize="18sp"
            android:onClick="writeToLogCat" />

        <Button
            android:id="@+id/btn_write_to_logcat_listener"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_to_logcat_listener"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btn_show_toast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_toast"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_write_something"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text='@{user.firstName + " " + user.lastName}'
            android:textAlignment="center"
            android:textSize="22sp"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btn_write_to_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/write_to_textview"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@={user.firstName}"
            android:hint="@string/first_name_hint"
            android:textAlignment="center"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/et_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@={user.lastName}"
            android:hint="@string/last_name_hint"
            android:textAlignment="center"
            android:textSize="22sp" />

        <Button
            android:id="@+id/btn_update_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/update_user_data"
            android:textSize="18sp" />

    </LinearLayout>

</layout>
